fix: update spring boot to version 4 and java to version 25 (#120)